--- a/src/Pages/Booked/Booked.css
+++ b/src/Pages/Booked/Booked.css
@@ -1,5 +1,6 @@
 .booking-form{
     margin:30px 100px;
+   
 }
 .booking-form input {
     display: block;
@@ -12,4 +13,11 @@
 
 .error{
     color:red;
+}
+
+.booked{
+   
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
