--- a/src/Pages/Chose Us/Chose.css
+++ b/src/Pages/Chose Us/Chose.css
@@ -1,7 +1,7 @@
-.chose{
+/* .chose{
     height: 500px;
    background-image: url(../../image/chose-bg/back.jpg);
-}
+} */
 .btn{
     text-decoration: none;
     
@@ -10,3 +10,7 @@
     justify-content:space-evenly;
     align-items: center;
 }
+
+/* .test{
+    height: 800px;
+} */
